fix: text misalignment issues after upgrading to pdfjs@5.4.530

--- a/src/styles/pdf-text-layer.css
+++ b/src/styles/pdf-text-layer.css
@@ -6,11 +6,14 @@
   line-height: 1;
   text-size-adjust: none;
   forced-color-adjust: none;
-  transform-origin: 0 0;
+  transform-origin: 0% 0%;
   transform: scale(var(--ff-smooth-scale, 1));
   --scale-round-x: 2px;
   --scale-round-y: 2px;
   --total-scale-factor: calc(var(--scale-factor) * var(--user-unit));
+  --min-font-size: 1;
+  --text-scale-factor: calc(var(--total-scale-factor) * var(--min-font-size));
+  --min-font-size-inv: calc(1 / var(--min-font-size));
   mix-blend-mode: multiply;
 }
 
@@ -32,6 +35,19 @@
   cursor: text;
   margin: 0;
   transform-origin: 0 0;
+}
+
+.textLayer > :not(.markedContent),
+.textLayer .markedContent span:not(.markedContent) {
+  z-index: 1;
+
+  --font-height: 0;
+  font-size: calc(var(--text-scale-factor) * var(--font-height));
+
+  --scale-x: 1;
+  --rotate: 0deg;
+  transform: rotate(var(--rotate)) scaleX(var(--scale-x))
+    scale(var(--min-font-size-inv));
 }
 
 .textLayer.selecting :is(span, br) {
